fixed positioning with overflow

--- a/app/assets/stylesheets/imgstyling.css
+++ b/app/assets/stylesheets/imgstyling.css
@@ -3,13 +3,12 @@
     font-family: 'Rajdhani', sans-serif;
 }
 body {
-	margin:0 auto;
-  font-family: 'Rajdhani', sans-serif;
-	padding-right: 30px;
-	padding-left: 30px;
-
+  margin: 0px 35px;
+  font-family: "Rajdhani",sans-serif;
+  padding-right: 30px;
+  padding-left: 30px;
+  overflow: hidden;
 }
-
 header {
 	width: 100vw;
 	font-size: 30px;
@@ -49,7 +48,7 @@ header {
 }
 
 .container {
-		width: 100%;
+	width: 100%;
 	height: 100%;
 	margin: 0 auto;
 	text-align: center;
@@ -72,10 +71,9 @@ header {
 	padding-bottom: 50px;
 }
 .rightbar {
-	height: 77vh;
-	width: 60vw;
-	float: right;
-	margin-top: -52px;
+  height: 77vh;
+  float: right;
+  margin-top: -52px;
 }
 .searchtag {
   text-align: center;
@@ -132,15 +130,14 @@ footer {
 
 
 .bigpic {
-	width: 500px;
-	padding: 70px 20px 30px 20px;
+  width: 400px;
+  padding: 70px 0px 0px;
 }
 
 .smallpic {
-	height: 180px;
-	width: 180px;
-	display: inline-block;
-	padding: 14px;
+  width: 150px;
+  display: inline-block;
+  padding: 10px;
 }
 
 .smallbar {
